fix overflow

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -71,11 +71,9 @@ input {
 
   @media screen and (max-width: $breakpoint-xs) {
     //bottom: 8px;
-  }
-
-  @media screen and (max-width: 303px){
     display: none;
   }
+
 }
 
 .faulty-entry {
