--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,19 +31,22 @@
 }
 
 html, body { 
-    height: 100%;
-    width: 100%;
-    scroll-behavior: smooth;
-    font-size: calc(16px + (28 - 16) * ((100vw - 320px) / (1600 - 320))); // 1rem between 16px and 28px (viewports between 320px - 1600px)
+  min-height:100%;
+  min-width:100%;
+  width: 100%;
+  scroll-behavior: smooth;
+  font-size: calc(16px + (28 - 16) * ((100vw - 320px) / (1600 - 320))); // 1rem between 16px and 28px (viewports between 320px - 1600px)
+  box-sizing:border-box;
+  overflow-x: hidden;
 }
 
 body { 
   margin: 0; 
+  padding:0;
   // font-family: Roboto, "Helvetica Neue", sans-serif; 
   font-family: Karla, sans-serif;
   color: white;
   background-color: var(--col-blue-10);
-  overflow-x: hidden;
 }
 
 button {
